syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service CompanyJobService{
	rpc GetCompanyJob(CompanyJobIdRequest) returns (CompanyJob);
	rpc CreateCompanyJob(CompanyJobs) returns (google.protobuf.Empty);
	rpc UpdateCompanyJob(CompanyJobs) returns (google.protobuf.Empty);
	rpc DeleteCompanyJob(CompanyJobs) returns (google.protobuf.Empty);
 }
	message CompanyJobIdRequest{
		string Id = 1;
	}

	message CompanyJob{
		string Id =1;
		string Company =2;
        google.protobuf.Timestamp ProfileCreated =4;
        bool IsCompanyHidden =5;
	}

	message CompanyJobs{
		repeated CompanyJob companyJob = 1;
	}

